Add: project impl

--- a/impl/build.gradle
+++ b/impl/build.gradle
@@ -11,10 +11,9 @@ dependencies {
     compile "com.github.snowdream.toybricks:annotation:0.9.9"
 
     kapt "com.github.snowdream.toybricks:processor:0.9.9"
-    //annotationProcessor "com.github.snowdream.toybricks:processor:0.9.9"
+   //annotationProcessor "com.github.snowdream.toybricks:processor:0.9.9"
 
-    compile 'com.github.snowdream:toybricks:0.9.9@aar'
-
+    compile project(':lib')
 }
 
 apply plugin: 'com.github.snowdream.toybricks'
