--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,19 +2,19 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply from: "${rootDir}/gradle/plugins/android.gradle"
 
-//kapt {
-//    generateStubs = true
-//}
-//
-//dependencies {
-//    compile 'com.github.snowdream:annotation:0.7@aar'
-//
-//    compile project(':lib')
-//    compile "com.github.snowdream.toybricks:annotation:0.9.5"
-//
-//    //annotationProcessor project(':processor')
-//    //kapt "com.github.snowdream.toybricks:processor:0.9.5"
-//    annotationProcessor "com.github.snowdream.toybricks:processor:0.9.5"
-//}
-//
-//apply plugin: 'com.github.snowdream.toybricks'
+kapt {
+    generateStubs = true
+}
+
+dependencies {
+    compile 'com.github.snowdream:annotation:0.7@aar'
+
+    compile project(':lib')
+    compile project(':impl')
+    compile "com.github.snowdream.toybricks:annotation:0.9.9"
+
+    kapt "com.github.snowdream.toybricks:processor:0.9.9"
+//    annotationProcessor "com.github.snowdream.toybricks:processor:0.9.9"
+}
+
+apply plugin: 'com.github.snowdream.toybricks'
