--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,14 +7,14 @@ kapt {
 }
 
 dependencies {
-    compile 'com.github.snowdream:annotation:0.7@aar'
+    compile deps.'snowdream-annotation'
 
     compile project(':lib')
     compile project(':impl')
-    compile "com.github.snowdream.toybricks:annotation:0.9.10"
+    compile deps.'android-toybricks-annotation'
 
-    kapt "com.github.snowdream.toybricks:processor:0.9.10"
-//    annotationProcessor "com.github.snowdream.toybricks:processor:0.9.10"
+    kapt deps.'android-toybricks-processor'
+    //annotationProcessor deps.'android-toybricks-processor'
 }
 
 apply plugin: 'com.github.snowdream.toybricks'
